production/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 
  namespace: 
spec:
  selector:
    app: 
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3010
