production/service/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: ""
    alb.ingress.kubernetes.io/subnets: 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/load-balancer-name: ""
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: ssl-redirect
              port:
                name: use-annotation
        - pathType: Prefix
          path: /
          backend:
            service:
              name: istio-ingressgateway
              port:
                number: 80
