production/service/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: 
  namespace: 
spec:
  hosts:
  - ""
  gateways:
  - 
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host:
